<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <artifactId>demoiselle-crud</artifactId>
   <packaging>jar</packaging>

   <name>Demoiselle JEE CRUD</name>
   <description>
        Demoiselle CRUD
    </description>

   <parent>
      <groupId>org.demoiselle.jee</groupId>
      <artifactId>demoiselle-parent</artifactId>
      <version>4.1.0-SNAPSHOT</version>
      <relativePath>../demoiselle-parent</relativePath>
   </parent>

   <build>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>
            <configuration>
               <showDeprecation>true</showDeprecation>
               <release>17</release>
               <encoding>UTF-8</encoding>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <dependencies>

      <dependency>
         <groupId>org.demoiselle.jee</groupId>
         <artifactId>demoiselle-core</artifactId>
      </dependency>

      <dependency>
         <groupId>org.demoiselle.jee</groupId>
         <artifactId>demoiselle-rest</artifactId>
      </dependency>

      <dependency>
         <groupId>jakarta.platform</groupId>
         <artifactId>jakarta.jakartaee-api</artifactId>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>net.jqwik</groupId>
         <artifactId>jqwik</artifactId>
         <scope>test</scope>
      </dependency>

   </dependencies>

</project>
